# Python_Web_HW2

./: README.md
FinalProject/: Bot.py  UML_diagram.drawio  info.py  logs.txt  pyproject.toml
