[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["Maksym Melnyk <maks.melnyk.94@gmail.com>"]
readme = "README.md"
#packages = [{include = "finalproject"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
